--- a/index.html
+++ b/index.html
@@ -164,3 +164,11 @@
   </footer>
 </body>
 </html>
+
+  <!-- Game Project Section -->
+  <h2>My Game Project</h2>
+  <ul>
+    <li>Old Game: <a href="https://aashiqua02.github.io/ashikaaaaa/Game3.html" target="_blank">Play Old Game</a></li>
+    <li>Improved Game: <a href="https://aashiqua02.github.io/ashikaaaaa/add.html" target="_blank">Play Improved Game</a></li>
+    <li>AI Prompt & Chat: <a href="https://docs.google.com/document/d/1j1olH_-MEVjwjwdap3196qTgHKd115HQLesDcZKysNw/edit?usp=sharing" target="_blank">View Google Doc</a></li>
+  </ul>
