--- a/index.html
+++ b/index.html
@@ -166,9 +166,18 @@
 </html>
 
   <!-- Game Project Section -->
+<div style="text-align: center; margin-top: 40px;">
   <h2>My Game Project</h2>
-  <ul>
-    <li>Old Game: <a href="https://aashiqua02.github.io/ashikaaaaa/Game3.html" target="_blank">Play Old Game</a></li>
-    <li>Improved Game: <a href="https://aashiqua02.github.io/ashikaaaaa/add.html" target="_blank">Play Improved Game</a></li>
-    <li>AI Prompt & Chat: <a href="https://docs.google.com/document/d/1j1olH_-MEVjwjwdap3196qTgHKd115HQLesDcZKysNw/edit?usp=sharing" target="_blank">View Google Doc</a></li>
+  <ul style="list-style-type: none; padding: 0;">
+    <li style="margin: 10px 0;">
+      <a href="https://aashiqua02.github.io/ashikaaaaa/Game3.html" target="_blank">Play Old Game</a>
+    </li>
+    <li style="margin: 10px 0;">
+      <a href="https://aashiqua02.github.io/ashikaaaaa/add.html" target="_blank">Play Improved Game</a>
+    </li>
+    <li style="margin: 10px 0;">
+      <a href="https://docs.google.com/document/d/1j1olH_-MEVjwjwdap3196qTgHKd115HQLesDcZKysNw/edit?usp=sharing" target="_blank">View Google Doc</a>
+    </li>
   </ul>
+</div>
+
