--- a/index.html
+++ b/index.html
@@ -158,17 +158,10 @@
     <p>Phone: 010-4636-9379</p>
     <p>Instagram: <a href="https://www.instagram.com/asheeee02" target="_blank">@asheeee02</a></p>
   </section>
-
-  <footer>
-    &copy; 2025 Ashika Sherpa | All Rights Reserved
-  </footer>
-</body>
-</html>
-
- <!-- Game Project Section -->
-<div style="text-align: center; margin-top: 40px;">
+<!-- Game Project Section -->
+<section style="text-align: center; margin: 50px 0;">
   <h2>My Game Project</h2>
-  <ul style="list-style-type: none; padding: 0;">
+  <ul style="list-style: none; padding: 0; margin: 20px 0;">
     <li style="margin: 10px 0;">
       <a href="https://aashiqua02.github.io/ashikaaaaa/Game3.html" target="_blank">Play Old Game</a>
     </li>
@@ -179,6 +172,11 @@
       <a href="https://docs.google.com/document/d/1j1olH_-MEVjwjwdap3196qTgHKd115HQLesDcZKysNw/edit?usp=sharing" target="_blank">View Google Doc</a>
     </li>
   </ul>
-</div>
- 
+</section>
+
+  <footer>
+    &copy; 2025 Ashika Sherpa | All Rights Reserved
+  </footer>
+</body>
+</html>
 
